<resources>
    <string name="app_name">MemoriesApp</string>
    <string name="title_text">Your Memories are now safe!</string>
    <string name="greateful_text">Save youre memories</string>
    <string name="get_started_text">Start NOW</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="post_title" >Where/When</string>
    <string name="thoughts">Why/With who</string>
    <string name="save_button">Save</string>
    <string name="post_button_text">Save</string>
    <string name="menu_title">Add new Memeory</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Click "+" to create a new Memorie</string>
</resources>